# articles-proj

./: docker-compose.yml  init.sql
articles-api/: go.mod
articles-api/internal/domain/model/: article.go  author.go  common.go
articles-front/: package-lock.json  package.json
articles-front/src/: App.tsx
articles-image-service/: .env  Cargo.toml
articles-image-service/src/: common.rs  dto.rs  handlers.rs  image.rs  image_service.rs  main.rs
articles-image-service/src/utils/: mod.rs
