[package]
name = "articles-image-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Web
actix-web = "4.4.0"
actix-multipart = "0.5.0"
# Serelization/Desereliazation
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1"
# Async
tokio ={version = "1.34.0", features = ["full"]}
# Logging
log = "0.4.20"
fern = "0.6.2"
# Image processing
image = "0.24.7"
# Other
rand = "0.8.5"
chrono = "0.4.31"
anyhow = "1.0.75"
thiserror = "1.0.50"
dotenv = "0.15.0"
futures-util = "0.3.29"
uuid = {version = "1.6.1", features = ["v4", "serde"]}
